fix correção na destribuição de responsabilidades